--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 news.save.json.path = ./data/dataJson.json
+
 hibernate.physical_naming_strategy = com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example2
+spring.datasource.url=jdbc:mysql://localhost:3306/news_database
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
